crates/components/tests/snapshots/components__htop_4x2_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(h.as_mut(), &history, &th, size)"
---
size: 80x20
tier: table
view:
  stack:
    children:
      - - Fill(1)
        - stack:
            children:
              - - Len(3)
                - stack:
                    children:
                      - - Fill(1)
                        - stack:
                            children:
                              - - Len(1)
                                - segmented:
                                    label: CPU
                                    segments:
                                      - - AccentTertiary
                                        - 0.008929303847253323
                                      - - Ok
                                        - 0.33484888076782227
                                      - - Crit
                                        - 0.10268699377775192
                                      - - Info
                                        - 0
                                    text: 44.6%
                              - - Fill(1)
                                - sparkline:
                                    gradient: Load
                                    max: 100
                                    n: 39
                                    series:
                                      - 32.240081787109375
                                      - 36.091163635253906
                                      - 38.412315368652344
                                      - 39.60268783569336
                                      - 40.375675201416016
                                      - 41.60244369506836
                                      - 41.36821746826172
                                      - 42.30147933959961
                                      - 42.6070671081543
                                      - 42.056983947753906
                                      - 41.736961364746094
                                      - 42.58759307861328
                                      - 42.29230499267578
                                      - 42.82126998901367
                                      - 42.66040802001953
                                      - 43.51015853881836
                                      - 43.7466926574707
                                      - 44.16597366333008
                                      - 44.701290130615234
                                      - 44.16093826293945
                                      - 43.60411071777344
                                      - 43.94908142089844
                                      - 44.33559036254883
                                      - 43.59581756591797
                                      - 44.479530334472656
                                      - 42.28839874267578
                                      - 42.60289001464844
                                      - 43.472442626953125
                                      - 44.13790512084961
                                      - 44.355709075927734
                                      - 44.502994537353516
                                      - 45.880218505859375
                                      - 44.61550521850586
                                      - 45.34556579589844
                                      - 44.65518569946289
                                      - 44.10500717163086
                                      - 44.4130744934082
                                      - 44.21654510498047
                                      - 45.88029479980469
                            dir: V
                      - - Len(2)
                        - empty
                      - - Fill(1)
                        - stack:
                            children:
                              - - Len(1)
                                - segmented:
                                    label: MEM
                                    segments:
                                      - - Ok
                                        - 0.1825650930404663
                                      - - AccentPrimary
                                        - 0.010999999940395355
                                      - - AccentTertiary
                                        - 0.009999999776482582
                                      - - Warn
                                        - 0.2199999988079071
                                    text: 17.6G/91.0G
                              - - Len(1)
                                - segmented:
                                    label: SWP
                                    segments:
                                      - - Crit
                                        - 0
                                      - - Warn
                                        - 0
                                    text: 0.00K/16.0G
                              - - Fill(1)
                                - empty
                            dir: V
                    dir: H
              - - Len(1)
                - text:
                    - - bold: false
                        role: Text
                        s: "207, 1792 thr, 431 kthr; 4 running"
                      - bold: false
                        role: TextGhost
                        s: " · "
                      - bold: false
                        role: TextMuted
                        s: "load "
                      - bold: false
                        role: Text
                        s: 4.57 4.25 3.57
                      - bold: false
                        role: TextGhost
                        s: " · "
                      - bold: false
                        role: TextMuted
                        s: "up "
                      - bold: false
                        role: Text
                        s: "3d 06:01"
              - - Fill(1)
                - stack:
                    children:
                      - - Fill(1)
                        - stack:
                            children:
                              - - Len(1)
                                - text:
                                    - - bold: true
                                        role: AccentSecondary
                                        s: CCD0
                                      - bold: false
                                        role: TextGhost
                                        s: "  "
                                      - bold: false
                                        role: TextMuted
                                        s: 4.9 GHz
                                      - bold: false
                                        role: TextGhost
                                        s: "  "
                                      - bold: false
                                        role: TextMuted
                                        s: 50.2 °C
                              - - Fill(1)
                                - bars:
                                    gradient: Load
                                    labels: ~
                                    n: 39
                                    peaks: false
                                    values:
                                      - 0
                                      - 0.6299288868904114
                                      - 0
                                      - 0.6532060503959656
                                      - 0
                                      - 0
                                      - 0.720914900302887
                                      - 0
                                      - 0.7937625646591187
                                      - 0
                                      - 0
                                      - 0.7217786908149719
                                      - 0
                                      - 0.8408556580543518
                                      - 0
                                      - 0
                                      - 0.7962380051612854
                                      - 0
                                      - 0.7056320905685425
                                      - 0
                                      - 0
                                      - 0.5729464292526245
                                      - 0
                                      - 0.7937982678413391
                                      - 0
                                      - 0
                                      - 0.5945516228675842
                                      - 0
                                      - 0.8033365607261658
                                      - 0
                                      - 0
                                      - 0.8859895467758179
                                      - 0
                                      - 0.7723265290260315
                                      - 0
                                      - 0
                                      - 0.6925133466720581
                                      - 0
                                      - 0.7499111294746399
                              - - Len(1)
                                - text:
                                    - - bold: false
                                        role: TextMuted
                                        s: "  0    1    2    3    4    5    6    7 "
                            dir: V
                      - - Fill(1)
                        - stack:
                            children:
                              - - Len(1)
                                - text:
                                    - - bold: true
                                        role: AccentSecondary
                                        s: CCD1
                                      - bold: false
                                        role: TextGhost
                                        s: "  "
                                      - bold: false
                                        role: TextMuted
                                        s: 5.4 GHz
                                      - bold: false
                                        role: TextGhost
                                        s: "  "
                                      - bold: false
                                        role: TextMuted
                                        s: 48.0 °C
                              - - Fill(1)
                                - bars:
                                    gradient: Load
                                    labels: ~
                                    n: 39
                                    peaks: false
                                    values:
                                      - 0
                                      - 0.11105494946241379
                                      - 0
                                      - 0.20074042677879333
                                      - 0
                                      - 0
                                      - 0.20457205176353455
                                      - 0
                                      - 0.15100879967212677
                                      - 0
                                      - 0
                                      - 0.09208863228559494
                                      - 0
                                      - 0.17874036729335785
                                      - 0
                                      - 0
                                      - 0.22444073855876923
                                      - 0
                                      - 0.1404297649860382
                                      - 0
                                      - 0
                                      - 0.16622920334339142
                                      - 0
                                      - 0.22428856790065765
                                      - 0
                                      - 0
                                      - 0.31452301144599915
                                      - 0
                                      - 0.0809137299656868
                                      - 0
                                      - 0
                                      - 0.1703823357820511
                                      - 0
                                      - 0.18424513936042786
                                      - 0
                                      - 0
                                      - 0.09140017628669739
                                      - 0
                                      - 0.024137981235980988
                              - - Len(1)
                                - text:
                                    - - bold: false
                                        role: TextMuted
                                        s: "  8    9   10   11   12   13   14   15 "
                            dir: V
                    dir: H
              - - Len(1)
                - text:
                    - - bold: false
                        role: TextMuted
                        s: "PSI "
                      - bold: false
                        role: TextMuted
                        s: "cpu "
                      - bold: false
                        role: Text
                        s: "1.43"
                      - bold: false
                        role: TextGhost
                        s: " · "
                      - bold: false
                        role: TextMuted
                        s: "mem "
                      - bold: false
                        role: Text
                        s: "0.29"
                      - bold: false
                        role: TextGhost
                        s: " · "
                      - bold: false
                        role: TextMuted
                        s: "io "
                      - bold: false
                        role: Text
                        s: "1.18"
            dir: V
      - - Len(8)
        - table:
            columns:
              - PID
              - RES
              - SHR
              - S
              - CPU%
              - MEM%
              - TIME+
              - Command
            rows:
              - - " 555555"
                - 1123M
                - "88000"
                - R
                - "1971.4"
                - " 1.2"
                - "21:24.30"
                - cargo build --release
              - - " 555601"
                - " 869M"
                - "40000"
                - R
                - " 627.5"
                - " 0.9"
                - " 7:25.10"
                - rustc --crate-name gridwatch_app --edition=2024
              - - " 412345"
                - 12.5G
                - 1503M
                - R
                - " 459.6"
                - "13.7"
                - " 3h29:40"
                - /opt/game/bin/game --fullscreen --vulkan
              - - "   6120"
                - " 960M"
                - " 302M"
                - S
                - "  18.3"
                - " 1.0"
                - "13h22:15"
                - /usr/lib/firefox/firefox
              - - "   2990"
                - "33000"
                - " 9000"
                - D
                - "  10.6"
                - " 0.0"
                - " 0:40.12"
                - rsync -a /home/mattbeam/ /mnt/backup/
              - - "   6350"
                - " 392M"
                - " 146M"
                - S
                - "   7.6"
                - " 0.4"
                - " 2h32:05"
                - /usr/lib/firefox/firefox -contentproc -childID 7 -isForBrowser
              - - "  11805"
                - "99900"
                - "60100"
                - S
                - "   3.6"
                - " 0.1"
                - "35:06.37"
                - /usr/bin/ptyxis --gapplication-service
            scroll: 0
            selected: ~
            sort:
              - 4
              - Desc
    dir: V
