crates/components/tests/snapshots/components__htop_6x3_at_120x40_dense.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(h.as_mut(), &history, &th, size)"
---
size: 59x18
tier: table
view:
  stack:
    children:
      - - Fill(1)
        - stack:
            children:
              - - Len(3)
                - stack:
                    children:
                      - - Len(1)
                        - segmented:
                            label: CPU
                            segments:
                              - - AccentTertiary
                                - 0.008929303847253323
                              - - Ok
                                - 0.33484888076782227
                              - - Crit
                                - 0.10268699377775192
                              - - Info
                                - 0
                            text: 44.6%
                      - - Len(1)
                        - segmented:
                            label: MEM
                            segments:
                              - - Ok
                                - 0.1825650930404663
                              - - AccentPrimary
                                - 0.010999999940395355
                              - - AccentTertiary
                                - 0.009999999776482582
                              - - Warn
                                - 0.2199999988079071
                            text: 17.6G/91.0G
                      - - Len(1)
                        - segmented:
                            label: SWP
                            segments:
                              - - Crit
                                - 0
                              - - Warn
                                - 0
                            text: 0.00K/16.0G
                    dir: V
              - - Len(1)
                - text:
                    - - bold: false
                        role: Text
                        s: "207, 1792 thr, 431 kthr; 4 running"
                      - bold: false
                        role: TextGhost
                        s: " · "
                      - bold: false
                        role: TextMuted
                        s: "load "
                      - bold: false
                        role: Text
                        s: 4.57 4.25 3.57
              - - Fill(1)
                - stack:
                    children:
                      - - Fill(1)
                        - stack:
                            children:
                              - - Len(1)
                                - text:
                                    - - bold: true
                                        role: AccentSecondary
                                        s: CCD0
                                      - bold: false
                                        role: TextGhost
                                        s: "  "
                                      - bold: false
                                        role: TextMuted
                                        s: 4.9 GHz
                                      - bold: false
                                        role: TextGhost
                                        s: "  "
                                      - bold: false
                                        role: TextMuted
                                        s: 50.2 °C
                              - - Fill(1)
                                - bars:
                                    gradient: Load
                                    labels: ~
                                    n: 26
                                    peaks: false
                                    values:
                                      - 0
                                      - 0
                                      - 0
                                      - 0.6299288868904114
                                      - 0.6532060503959656
                                      - 0
                                      - 0.720914900302887
                                      - 0.7937625646591187
                                      - 0
                                      - 0.7217786908149719
                                      - 0.8408556580543518
                                      - 0
                                      - 0.7962380051612854
                                      - 0.7056320905685425
                                      - 0
                                      - 0.5729464292526245
                                      - 0.7937982678413391
                                      - 0
                                      - 0.5945516228675842
                                      - 0.8033365607261658
                                      - 0
                                      - 0.8859895467758179
                                      - 0.7723265290260315
                                      - 0
                                      - 0.6925133466720581
                                      - 0.7499111294746399
                              - - Len(1)
                                - text:
                                    - - bold: false
                                        role: TextMuted
                                        s: "   0  1  2  3  4  5  6  7 "
                            dir: V
                      - - Fill(1)
                        - stack:
                            children:
                              - - Len(1)
                                - text:
                                    - - bold: true
                                        role: AccentSecondary
                                        s: CCD1
                                      - bold: false
                                        role: TextGhost
                                        s: "  "
                                      - bold: false
                                        role: TextMuted
                                        s: 5.4 GHz
                                      - bold: false
                                        role: TextGhost
                                        s: "  "
                                      - bold: false
                                        role: TextMuted
                                        s: 48.0 °C
                              - - Fill(1)
                                - bars:
                                    gradient: Load
                                    labels: ~
                                    n: 26
                                    peaks: false
                                    values:
                                      - 0
                                      - 0
                                      - 0
                                      - 0.11105494946241379
                                      - 0.20074042677879333
                                      - 0
                                      - 0.20457205176353455
                                      - 0.15100879967212677
                                      - 0
                                      - 0.09208863228559494
                                      - 0.17874036729335785
                                      - 0
                                      - 0.22444073855876923
                                      - 0.1404297649860382
                                      - 0
                                      - 0.16622920334339142
                                      - 0.22428856790065765
                                      - 0
                                      - 0.31452301144599915
                                      - 0.0809137299656868
                                      - 0
                                      - 0.1703823357820511
                                      - 0.18424513936042786
                                      - 0
                                      - 0.09140017628669739
                                      - 0.024137981235980988
                              - - Len(1)
                                - text:
                                    - - bold: false
                                        role: TextMuted
                                        s: "   8  9  10 11 12 13 14 15"
                            dir: V
                    dir: H
              - - Len(1)
                - text:
                    - - bold: false
                        role: TextMuted
                        s: "PSI "
                      - bold: false
                        role: TextMuted
                        s: "cpu "
                      - bold: false
                        role: Text
                        s: "1.43"
                      - bold: false
                        role: TextGhost
                        s: " · "
                      - bold: false
                        role: TextMuted
                        s: "mem "
                      - bold: false
                        role: Text
                        s: "0.29"
                      - bold: false
                        role: TextGhost
                        s: " · "
                      - bold: false
                        role: TextMuted
                        s: "io "
                      - bold: false
                        role: Text
                        s: "1.18"
            dir: V
      - - Len(6)
        - table:
            columns:
              - PID
              - RES
              - S
              - CPU%
              - MEM%
              - TIME+
              - Command
            rows:
              - - " 555555"
                - 1123M
                - R
                - "1971.4"
                - " 1.2"
                - "21:24.30"
                - cargo build --release
              - - " 555601"
                - " 869M"
                - R
                - " 627.5"
                - " 0.9"
                - " 7:25.10"
                - rustc --crate-name gridwatch_app --edition=2024
              - - " 412345"
                - 12.5G
                - R
                - " 459.6"
                - "13.7"
                - " 3h29:40"
                - /opt/game/bin/game --fullscreen --vulkan
              - - "   6120"
                - " 960M"
                - S
                - "  18.3"
                - " 1.0"
                - "13h22:15"
                - /usr/lib/firefox/firefox
              - - "   2990"
                - "33000"
                - D
                - "  10.6"
                - " 0.0"
                - " 0:40.12"
                - rsync -a /home/mattbeam/ /mnt/backup/
            scroll: 0
            selected: ~
            sort:
              - 3
              - Desc
    dir: V
